# Anna-Data

./: README.md
backend/: .env.example  DOCKERFILE  main.ipynb  main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/components/: mockup.jsx
frontend/src/: App.jsx  main.jsx
