[project]
name = "code-for-bharat-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain[google-genai]>=0.3.26",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    "python-dotenv>=1.1.1",
    "langchain-community>=0.3.26",
    "google-cloud-translate>=3.21.0",
    "langchain-google-community>=2.0.7",
    "pyowm>=3.3.0",
    "duckduckgo-search>=8.0.4",
    "langchain-nvidia-ai-endpoints>=0.3.10",
    "pymongo>=4.13.2",
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "infobip-api-python-client>=5.1.1",
    "twilio>=9.6.3",
]
